--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div id="net"></div>
         <div id="app">
             <h1>Welcome to Good-Game-Services Inc.</h1>
-            <p>Good-Game-Services Inc. is a VPN provider located in Germany. We offer complete anonymity on the internet.</p>
+            <p>GoodGameServices Inc. is a development studio for desktop applications or backend applications with high quality from germany.</p>
         </div>
         <footer id="footer">
             <ul class="icons">
