--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <li><a href="https://github.com/Good-Game-Services" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
             </ul>
             <ul class="copyright">
-                <strong><a href="https://ggs-network.de">©2022 GGS-Network belongs to the company ©2021 GoodGameServices Inc.</a></strong> | <strong><a href="https://www.apache.org/licenses/LICENSE-2.0">Licence</a></strong> | <strong><a href="https://ggs-network.de/datenschutz.php">Data Policy</a></strong>
+                <strong><a href="https://good-game-services.openvpn.com">©2021 GoodGameServices Inc. OpenVPN Access</a></strong> | <strong><a href="https://www.apache.org/licenses/LICENSE-2.0">Licence</a></strong> | <strong><a href="https://ggs-network.de/datenschutz.php">Data Policy</a></strong>
             </ul>
         </footer>
     </body>
